<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/characterNameDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/closeTextButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/circlebackground"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/colorGray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toTopOf="@+id/text1Dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/closeTextButton"
        app:srcCompat="@drawable/character_11_image" />

    <TextView
        android:id="@+id/text1Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/statusDialog"
        app:layout_constraintTop_toBottomOf="@id/imageViewDialog"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/statusDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text2Dialog"
        app:layout_constraintTop_toBottomOf="@id/text1Dialog"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/text2Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lastLoc"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/lastLocDialog"
        app:layout_constraintTop_toBottomOf="@id/statusDialog"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/lastLocDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2Dialog"
        tools:layout_editor_absoluteX="5dp" />



</androidx.constraintlayout.widget.ConstraintLayout>